# alto-tools

./: .gitignore  .travis.yml  README.md  alto_ocr_confidence.py  alto_ocr_metadata.py  alto_ocr_text.py  alto_to_text.py  alto_tools.py  pyproject.toml
.github/workflows/: tests.yml
scripts/: alto_ocr_confidence.md  alto_ocr_metadata.md  alto_ocr_metadata.py  alto_ocr_text.py
src/alto_tools/: alto_tools.py
tests/: test_alto_tools.py  test_cli.py
tests/data/: PPN720183197-PHYS_0004.xml  PPN750717092-00000780.ocr.xml
